Fixed action menu not collapsing on IE11. Moved styles from item-preview-panel to app-contentstudio (#1310)

--- a/src/main/resources/assets/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
+++ b/src/main/resources/assets/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
@@ -162,7 +162,6 @@
     // to be above image input type mask and the input type itself
     z-index: @z-index-scroll-stick;
     top: @app-header-height - 1;
-    border-top: 1px solid @admin-medium-gray-border;
 
     box-shadow: -3px 3px 6px 0 @admin-toolbar-shadow;
   }
